# wikrev

./: .gitignore  LICENSE  README.md  pyproject.toml
src/wikrev/: app.py  config.py  git_changes.py  summarizer.py
src/wikrev/static/: styles.css
src/wikrev/templates/: change_card.html  index.html  layout.html
